[package]
name = "canvas-test"
version = "0.1.0"
authors = ["f4bl3d <mirinar@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus-web = { version = "0.4" }
dioxus = { version = "0.4" }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"

console_error_panic_hook = "0.1.7"
wasm-bindgen = { version = "0.2.90", features = ["serde", "serde-serialize"] }
web-sys = {version= "0.3.67", features  = [
  'CanvasRenderingContext2d',
  'console',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlDivElement',
  'MouseEvent',
  'Node',
  'Window',
 ]}
